--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,3 +12,7 @@ flate2 = "1.0.25"
 rand = "0.8.5"
 rand_distr = "0.4.3"
 rayon = "1.7.0"
+
+[profile.release]
+lto = true         # Link-time optimization
+codegen-units = 1  # Slower compilation but faster code
