--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ flate2 = "1.0.25"
 rand = "0.8.5"
 rand_distr = "0.4.3"
 rayon = "1.7.0"
+thread_local = "1.1.7"
 
 [profile.release]
 lto = true         # Link-time optimization
